--- a/TheaterSuggestions/Java/pom.xml
+++ b/TheaterSuggestions/Java/pom.xml
@@ -10,6 +10,21 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
     <groupId>com.baasie</groupId>
     <artifactId>SeatsSuggestionsParent</artifactId>
@@ -21,6 +36,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <modules>
@@ -100,5 +116,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+
 
 </project>
